volume fixes
this program only has two known bugs, the pieces spilling out of the next and hold, and the music not starting until the pause menu is opened and closed

--- a/style.css
+++ b/style.css
@@ -326,3 +326,9 @@ canvas#game {
   padding: 5px;
   width: 100%;
 }
+
+#volume-control {
+  display: flex;
+ align-items: center;
+  transform: translate(-9%, 0%);
+}
